# first_test

./: pyproject.toml
first_test/: capitalize.py
first_test/tests/: test_capitalize.py
